# agentspec

./: .gitignore  .shellcheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build-opencode.sh  build-plugin.sh
.claude-plugin/: marketplace.json  plugin.json
design/: agent-spec-plan-todo-list.md
docs/: AGENT_TEMPLATE_COMPARISON.md  README.md
examples/: README.md
plugin/: README.md
plugin/tools/spec-judge/: README.md  pyproject.toml
plugin/tools/spec-judge/examples/calibration/: b1_vagueness.md  b4_intent_drift.md
plugin/tools/spec-judge/schema/: evaluator_response.schema.json
plugin/tools/spec-judge/spec_judge/: __init__.py  cli.py  contracts.py  engine.py  ledger.py  openrouter.py  panel.py  vocab.py
presentation/: agentspec-presentation.html
scripts/: build_cursor.py  bump.sh  generate-agent-router.py  judge.py  transform-opencode-frontmatter.py
tasks/: backlog.md
tests/: conftest.py  conftest_opencode.py  test_build_targets.py  test_generate_agent_router.py  test_judge.py  test_lib_frontmatter.py  test_lib_packaging.py  test_lib_path_rewrite.py  test_lib_platforms.py  test_mcp_server.py  test_opencode_compat.py  (+1 more)
tools/spec-judge/: USAGE.md  pyproject.toml  spec-judge
tools/spec-judge/examples/calibration/: b2_capability_not_delivered.md  b3_internal_contradiction.md  good_clean.md
tools/spec-judge/spec_judge/: consensus.py  engine.py  evaluator.py  openrouter.py  prompts.py  protocol.py
tools/spec-judge/tests/: _helpers.py  conftest.py  test_calibration.py  test_cli.py  test_consensus.py  test_contracts.py  test_engine.py  test_init.py  test_ledger.py  test_openrouter.py  test_openrouter_live.py  test_panel.py  test_prompts.py  test_vocab.py
(+105 files in other folders)
