[project]
name = "agentspec-spec-judge"
version = "0.1.0"
description = "AgentSpec behavioral evaluation engine (the Judger) — prototype"
requires-python = ">=3.12"
# `spec_linter` (the sibling package under tools/spec-linter) is a real runtime
# dependency of spec_judge.consensus/.engine, but is deliberately NOT listed below:
# it has no published package of its own. It resolves via the `spec-judge` wrapper
# script's PYTHONPATH, or an editable co-install of tools/spec-linter in dev — never
# through pip.
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
spec-judge = "spec_judge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spec_judge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: touches the real model API; skipped without OPENROUTER_API_KEY"]
