[project]
name = "agentspec-spec-judge"
version = "0.1.0"
description = "AgentSpec behavioral evaluation engine (the Judger) — prototype"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
spec-judge = "spec_judge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spec_judge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
